--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc -p .",
     "start": "NODE_PATH=./build node build/index.js",
     "dev": "NODE_ENV=dev nodemon -r tsconfig-paths/register src/app.ts",
+    "config": "cp ./.env.example ./.env",
     "test": "NODE_ENV=test mocha --check-leaks -r tsconfig-paths/register -r ts-node/register \"test/**/*.spec.ts\""
   },
   "dependencies": {
@@ -21,7 +22,6 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "chai": "^4.3.6",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
